--- a/mcmclib/CMakeLists.txt
+++ b/mcmclib/CMakeLists.txt
@@ -28,4 +28,4 @@ message(STATUS "install dir: ${CMAKE_INSTALL_PREFIX}")
 enable_testing()
 add_executable(t-setters t-setters.c infmcmc.c)
 target_link_libraries(t-setters ${LIBS})
-add_test(t-setters ${CMAKE_CURRENT_BINARY_DIR} t-setters)
+add_test(t-setters ${EXECUTABLE_OUTPUT_PATH} t-setters)
